Revert "Redesign wrestler profile (#237)" (#239)
This reverts commit 69bca26c0c145776722ae209050de2962d4bca44.